--- a/Application/Home/View/Layout/layout.html
+++ b/Application/Home/View/Layout/layout.html
@@ -67,8 +67,10 @@
             </div>
             <div class="col-md-2 header-right">
                 <div class="search-bar">
-                    <input type="text" placeholder="搜索">
-                    <input type="submit" value="">
+                    <form action="__CONTROLLER__/search.html">
+                        <input type="text" name="searchKey" placeholder="搜索">
+                        <input type="submit" value="">
+                    </form>
                 </div>
             </div>
             <div class="clearfix"></div>
