--- a/Application/Home/View/Layout/layout.html
+++ b/Application/Home/View/Layout/layout.html
@@ -49,7 +49,8 @@
 </div>
 <!--start-logo-->
 <!--bottom-header-->
-<div class="header-bottom ">
+<notpresent name="noNavTab">
+    <div class="header-bottom">
     <div class="container">
         <div class="header">
             <div class="col-md-10">
@@ -77,6 +78,7 @@
         </div>
     </div>
 </div>
+</notpresent>
 <!--bottom-header-->
 
 {__CONTENT__}
