--- a/Application/Home/View/Index/make_order.html
+++ b/Application/Home/View/Index/make_order.html
@@ -17,16 +17,16 @@
         <div class="ckeck-top heading">
             <h2>确认订单信息</h2>
         </div>
-        <p>收货地址<input placeholder="详细地址" type="text" tabindex="3" required style="width:50%;">&nbsp;
-            收货地址<input placeholder="详细地址" type="text" tabindex="3" required style="width:50%;">
-        </p>
+        <p>收货人姓名<input id="orderCName" placeholder="收货人姓名" type="text" required>
+        <p>联系电话<input id="orderPhone" placeholder="联系电话" type="text" required>
+        <p>收货地址<input id="orderAddress" placeholder="收货地址" type="text" tabindex="3" required style="width:40%;"></p>
 
 
         <div class="ckeckout-top">
             <div class="cart-items">
                 <div class="in-check">
                     <div class="header-bottom ">
-                        <p>确认商品信息</p>
+                        <p>确认订单信息</p>
                         <div class="table-responsive">
                             <table class="table table-bordered">
                                 <thead>
@@ -35,24 +35,29 @@
                                     <th>名称</th>
                                     <th>价格</th>
                                     <th>数量</th>
-                                    <th>编辑</th>
                                 </tr>
                                 </thead>
                                 <tbody>
-                                <tr>
-                                    <td>
-                                        <div class="col-md-4"></div>
-                                        <div href="single.html" class="thumbnail col-md-4"><img
-                                                src="__PUBLIC__/images/c-1.jpg" class="img-responsive" alt=""></div>
-                                        <div class="col-md-4"></div>
-                                    </td>
-                                    <td>Bangalore</td>
-                                    <td>Tanmay</td>
-                                    <td><input style="width:160px;" type="number" class="form-control" id="goodsCount"
-                                               name="goodsCount" placeholder="数量" readonly></td>
-                                    <td><input type="button" class="btn btn-danger" value="删除"/></td>
-                                </tr>
-
+                                <foreach name="data" item="v">
+                                    <tr>
+                                        <td>
+                                            <div class="col-md-4"></div>
+                                            <a href="__CONTROLLER__/single.html?goodsID={$v.goodsid}"
+                                               target="_blank"
+                                               class="thumbnail col-md-4"><img src="{$v.goodsphoto}"
+                                                                               class="img-responsive" alt=""></a>
+                                            <div class="col-md-4"></div>
+                                        </td>
+                                        <td>{$v.goodsname}</td>
+                                        <td>￥ {$v.goodsprice}</td>
+                                        <td><input style="width:160px;" type="number"
+                                                   class="form-control"
+                                                   placeholder="数量"
+                                                   value="{$v.goodscount}"
+                                                   readonly>
+                                        </td>
+                                    </tr>
+                                </foreach>
                                 </tbody>
                             </table>
                         </div>
@@ -63,15 +68,66 @@
         </div>
     </div>
     <div class="container">
-        <button type="button" class="btn btn-default pull-right" disabled="disabled">￥价格</button>
+        <div class="form-group form-inline pull-right">
+            <label for="textSumPrice">总价：</label>
+            <input type="text" class="form-control" id="textSumPrice" value="￥ {$sumPrice}" readonly/>
+        </div>
+
     </div>
     <br/>
     <div class="container">
-        <button type="button" class="btn btn-danger pull-right">提交订单</button>
-        <button type="button" class="btn btn-link pull-right">←返回购物车</button>
+        <button type="button" class="btn btn-danger pull-right" id="btnToMakeOrder">提交订单</button>
+        <a class="btn btn-link pull-right" href="__CONTROLLER__/cart.html">←返回购物车</a>
         <br/>
         <br/>
         <br/>
     </div>
     <!--end-ckeckout-->
     <!--information-starts-->
+</div>
+
+<input type="hidden" id="orderRealSumPrice" value="{$sumPrice}">
+<script src="__PUBLIC__/js/jquery.min.js"></script>
+<script src="__PUBLIC__/js/layer.js"></script>
+<script language="JavaScript">
+    $(function () {
+        $("#btnToMakeOrder").click(function () {
+            var orderCName = $("#orderCName").val();
+            var orderPhone = $("#orderPhone").val();
+            var orderAddress = $("#orderAddress").val();
+            var orderSumPrice = $("#orderRealSumPrice").val();
+
+            if (orderCName != '' && orderPhone != '' && orderAddress != '' && orderSumPrice != '') {
+                $.ajax({
+                    beforeSend: function () {
+                        layer.load(2);
+                    },
+                    url: "{:U('Order/placeOrder')}",
+                    type: 'post',
+                    data: {
+                        orderCName: orderCName,
+                        orderPhone: orderPhone,
+                        orderAddress: orderAddress,
+                        orderSumPrice: orderSumPrice
+                    },
+                    dataType: 'json',
+                    success: function (data) {
+                        layer.closeAll('loading');
+                        switch (data.response) {
+                            case 'success':
+                                window.location.href = "{:U('payOrder')}";
+                                break;
+                            case 'failed':
+                                $("#alertDialogMain").empty().append("抱歉，操作失败！");
+                                $("#alertDialog").modal('show');
+                                break;
+                        }
+                    }
+                })
+            } else {
+                $("#alertDialogMain").empty().append("订单收货信息请填写完整！");
+                $("#alertDialog").modal('show');
+            }
+        })
+    })
+</script>
