Home single goods page -- Now can see goods sold out count in this page.

--- a/Application/Home/View/Index/single.html
+++ b/Application/Home/View/Index/single.html
@@ -54,6 +54,7 @@
                             <p></p>
                             <div class="available">
                                 <ul>
+                                    <li>销量：{$data['gsoldoutnum']}</li>
                                     <li>数量
                                         <select id="goodsCount">
                                             <option value="1" selected>1</option>
