--- a/Application/Home/View/Index/products.html
+++ b/Application/Home/View/Index/products.html
@@ -16,30 +16,34 @@
     <div class="container">
         <div class="prdt-top">
             <div class="col-md-12 prdt-left">
-                <for start="0" end="$rowCount" name="row">
-                    <div class="product-one">
-                        <for start="0" end="4">
-                            <assign name="goodsID" value="$list[$i+($row*4)]['gid']"/>
-                            <notempty name="goodsID">
-                                <div class="col-md-3 product-left p-left">
-                                    <div class="product-main simpleCart_shelfItem">
-                                        <a href="__CONTROLLER__/single.html?goodsID={$goodsID}" class="mask"><img
-                                                class="img-responsive zoom-img" width="230"
-                                                height="230"
-                                                src="{$list[$i+($row*4)]['gphoto']}"
-                                                alt="{$list[$i+($row*4)]['gname']}"/></a>
-                                        <div class="product-bottom">
-                                            <h3>{$list[$i+($row*4)]['gname']}</h3>
-                                            <h4><span class=" item_price">￥ {$list[$i+($row*4)]['gprice']|default="0.00"}</span>
-                                            </h4>
+                <present name="emptyResult">
+                    <h2 style="text-align: center">O__O"…&nbsp;&nbsp;&nbsp;额。。。。似乎没有符合条件的商品喔~</h2>
+                    <else/>
+                    <for start="0" end="$rowCount" name="row">
+                        <div class="product-one">
+                            <for start="0" end="4">
+                                <assign name="goodsID" value="$list[$i+($row*4)]['gid']"/>
+                                <notempty name="goodsID">
+                                    <div class="col-md-3 product-left p-left">
+                                        <div class="product-main simpleCart_shelfItem">
+                                            <a href="__CONTROLLER__/single.html?goodsID={$goodsID}" class="mask"><img
+                                                    class="img-responsive zoom-img" width="230"
+                                                    height="230"
+                                                    src="{$list[$i+($row*4)]['gphoto']}"
+                                                    alt="{$list[$i+($row*4)]['gname']}"/></a>
+                                            <div class="product-bottom">
+                                                <h3>{$list[$i+($row*4)]['gname']}</h3>
+                                                <h4><span class=" item_price">￥ {$list[$i+($row*4)]['gprice']|default="0.00"}</span>
+                                                </h4>
+                                            </div>
                                         </div>
                                     </div>
-                                </div>
-                            </notempty>
-                        </for>
-                        <div class="clearfix"></div>
-                    </div>
-                </for>
+                                </notempty>
+                            </for>
+                            <div class="clearfix"></div>
+                        </div>
+                    </for>
+                </present>
                 <div class="clearfix"></div>
             </div>
         </div>
