--- a/Application/Home/View/Index/payment.html
+++ b/Application/Home/View/Index/payment.html
@@ -15,16 +15,17 @@
 
 <div style="width:100%; height:200px;">
     <center>
-        请输入密码确认支付：<input id="usrPasswd" placeholder="密码" type="password" style="background-color:#fff;" required>
-        <br>
-        <br>
-        <br>
-        <input type="button" value="确认支付" style="  color: #faddde;
-border: solid 1px #980c10; 
-background: #d81b21; 
-background: -webkit-gradient(linear, left top, left bottom, from(#ed1c24), to(#aa1317)); 
-background: -moz-linear-gradient(top, #ed1c24, #aa1317); 
-filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ed1c24', endColorstr='#aa1317'" );>
+        <p>订单号：{$Think.session.user.makeOrderID}</p>
+        <form action="__CONTROLLER__/orderPaid" method="post">
+            <input type="hidden" id="orderID" name="orderID" value="{$Think.session.user.makeOrderID}">
+            请输入密码确认支付：<input id="usrPasswd" name="usrPasswd" placeholder="密码" type="password"
+                             style="background-color:#fff;" required>
+            <br>
+            <br>
+            <br>
+            <input type="submit" value="确认支付"
+                   style="  color: #faddde;border: solid 1px #980c10;background: #d81b21;background: -webkit-gradient(linear, left top, left bottom, from(#ed1c24), to(#aa1317));background: -moz-linear-gradient(top, #ed1c24, #aa1317);filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ed1c24', endColorstr='#aa1317');">
+        </form>
     </center>
     </a>
 </div>
