--- a/Application/Home/View/Index/payment.html
+++ b/Application/Home/View/Index/payment.html
@@ -3,29 +3,34 @@
         <div class="breadcrumbs-main">
             <ol class="breadcrumb">
                 <li><a href="__CONTROLLER__/index.html">主页</a></li>
-                <li class="active">支付页面</li>
+                <li class="active">订单支付</li>
             </ol>
         </div>
     </div>
 </div>
-<br>
-<div class="ckeck-top heading">
-    <h2>确认支付</h2>
-</div>
 
-<div style="width:100%; height:200px;">
-    <center>
-        <p>订单号：{$Think.session.user.makeOrderID}</p>
-        <form action="__CONTROLLER__/orderPaid" method="post">
-            <input type="hidden" id="orderID" name="orderID" value="{$Think.session.user.makeOrderID}">
-            请输入密码确认支付：<input id="usrPasswd" name="usrPasswd" placeholder="密码" type="password"
-                             style="background-color:#fff;" required>
-            <br>
-            <br>
-            <br>
-            <input type="submit" value="确认支付"
-                   style="  color: #faddde;border: solid 1px #980c10;background: #d81b21;background: -webkit-gradient(linear, left top, left bottom, from(#ed1c24), to(#aa1317));background: -moz-linear-gradient(top, #ed1c24, #aa1317);filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ed1c24', endColorstr='#aa1317');">
-        </form>
-    </center>
-    </a>
+<div class="container">
+    <h3 class="page-header">订单已提交，点击下方按钮支付订单&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <small>订单号：{$Think.session.user.makeOrderID}</small>
+    </h3>
+    <div class="row">
+        <div class="col-md-6">
+            <button class="btn btn-primary btn-block">支付宝</button>
+        </div>
+
+        <div class="col-md-6">
+            <button class="btn btn-success btn-block">微信支付</button>
+        </div>
+    </div>
+    <br/>
+    <br/>
+    <div class="row">
+        <div class="col-md-4" style="display: block"></div>
+        <div class="col-md-4">
+            <a class="btn btn-default btn-block" href="__CONTROLLER__/index" style="margin: auto;">返回主页</a>
+        </div>
+        <div class="col-md-4" style="display: block"></div>
+    </div>
+    <br/>
+    <br/>
 </div>
