--- a/Application/Home/View/Index/payment.html
+++ b/Application/Home/View/Index/payment.html
@@ -13,13 +13,13 @@
     <h3 class="page-header">订单已提交，点击下方按钮支付订单&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         <small>订单号：{$Think.session.user.makeOrderID}</small>
     </h3>
+
     <div class="row">
         <div class="col-md-6">
-            <button class="btn btn-primary btn-block">支付宝</button>
+            <button class="btn btn-primary btn-block" data-toggle="modal" data-target="#alipayWindow">支付宝</button>
         </div>
-
         <div class="col-md-6">
-            <button class="btn btn-success btn-block">微信支付</button>
+            <button class="btn btn-success btn-block" data-toggle="modal" data-target="#wechatWindow">微信支付</button>
         </div>
     </div>
     <br/>
@@ -34,3 +34,99 @@
     <br/>
     <br/>
 </div>
+<input type="hidden" id="orderID" value="{$Think.session.user.makeOrderID}">
+
+<!-- 支付宝窗口 -->
+<div class="modal fade" id="alipayWindow">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                <h4 class="modal-title">使用支付宝支付</h4>
+            </div>
+            <div class="modal-body">
+                <p>使用手机扫描下方的二维码方可支付，支付成功后，该订单将交由客服审核，审核成功后方可发货。</p>
+                <p><img src="__PUBLIC__/images/payment/alipay.jpg" width="65%" height="65%"/></p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-success btn-block" id="btnPayByAlipay">付款完成</button>
+            </div>
+        </div><!-- /.modal-content -->
+    </div><!-- /.modal -->
+</div>
+
+<!-- 微信窗口 -->
+<div class="modal fade" id="wechatWindow">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                <h4 class="modal-title">使用微信支付</h4>
+            </div>
+            <div class="modal-body">
+                <p>使用手机扫描下方的二维码方可支付，支付成功后，该订单将交由客服审核，审核成功后方可发货。</p>
+                <p><img src="__PUBLIC__/images/payment/wechat.jpg" width="65%" height="65%"/></p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-success btn-block" id="btnPayByWechat">付款完成</button>
+            </div>
+        </div><!-- /.modal-content -->
+    </div><!-- /.modal -->
+</div>
+
+<!--footer-end-->
+<script src="__PUBLIC__/js/jquery.min.js"></script>
+<script language="JavaScript">
+    var orderID = $("#orderID").val();
+    $(function () {
+        $("#btnPayByAlipay").click(function () {
+            if (orderID != '') {
+                $.ajax({
+                    url: "{:U('Order/payOrder')}",
+                    type: 'post',
+                    data: {
+                        orderID: orderID,
+                        payBy: 'alipay'
+                    },
+                    dataType: 'json',
+                    success: function (data) {
+                        if (data.response == 'success') {
+                            $("#alipayWindow").modal('hide');
+                            $("#btnReload").prop('value', 'home');
+                            $("#alertDialogMain").empty().append("操作成功！");
+                        } else if (data.response == 'failed') {
+                            $("#alertDialogMain").empty().append("操作失败！");
+                        }
+
+                        $("#alertDialog").modal('show');
+                    }
+                })
+            }
+        });
+
+        $("#btnPayByWechat").click(function () {
+            if (orderID != '') {
+                $.ajax({
+                    url: "{:U('Order/payOrder')}",
+                    type: 'post',
+                    data: {
+                        orderID: orderID,
+                        payBy: 'wechat'
+                    },
+                    dataType: 'json',
+                    success: function (data) {
+                        if (data.response == 'success') {
+                            $("#wechatWindow").modal('hide');
+                            $("#btnReload").prop('value', 'home');
+                            $("#alertDialogMain").empty().append("操作成功！");
+                        } else if (data.response == 'failed') {
+                            $("#alertDialogMain").empty().append("操作失败！");
+                        }
+
+                        $("#alertDialog").modal('show');
+                    }
+                })
+            }
+        })
+    })
+</script>
