--- a/Application/Home/View/Index/cart.html
+++ b/Application/Home/View/Index/cart.html
@@ -25,11 +25,21 @@
                             <table class="table table-bordered text-center">
                                 <thead>
                                 <tr>
-                                    <th style="width:20%">商品</th>
-                                    <th style="width:20%">名称</th>
-                                    <th style="width:20%">价格</th>
-                                    <th style="width:20%">数量</th>
-                                    <th style="width:20%">编辑</th>
+                                    <th style="width:20%">
+                                        <center>商品</center>
+                                    </th>
+                                    <th style="width:20%">
+                                        <center>名称</center>
+                                    </th>
+                                    <th style="width:20%">
+                                        <center>价格</center>
+                                    </th>
+                                    <th style="width:20%">
+                                        <center>数量</center>
+                                    </th>
+                                    <th style="width:20%">
+                                        <center>编辑</center>
+                                    </th>
                                 </tr>
                                 </thead>
                                 <tbody>
@@ -60,8 +70,13 @@
                                                 <input type="hidden" class="currentGoodsCount" value="{$v.goodscount}"
                                                        data-value="{$v.goodsid}">
                                             </td>
-                                            <td><input class="btnDelCartGoods" type="button" value="删除"
-                                                       data-value="{$v.goodsid}" style="margin-top:50px;"/></td>
+                                            <!--<td><input class="btn btn-sm btn-danger btnDelCartGoods" type="button" value="删除"-->
+                                            <!--data-value="{$v.goodsid}" style="margin-top:50px;" /></td>-->
+                                            <td>
+                                                <button class="btn btn-sm btn-danger btnDelCartGoods"
+                                                        data-value="{$v.goodsid}" style="margin-top:50px;">删除
+                                                </button>
+                                            </td>
                                         </tr>
                                     </foreach>
                                 </empty>
