--- a/Application/Home/View/Index/make_order.html
+++ b/Application/Home/View/Index/make_order.html
@@ -92,7 +92,7 @@
     </div>
     <br/>
     <div class="container">
-        <button type="button" class="btn btn-danger pull-right" id="btnToMakeOrder">提交订单</button>
+        <button type="button" class="btn btn-success pull-right" id="btnToMakeOrder">提交订单</button>
         <a class="btn btn-link pull-right" href="__CONTROLLER__/cart.html">←返回购物车</a>
         <br/>
         <br/>
