--- a/Application/Home/View/Index/payment.html
+++ b/Application/Home/View/Index/payment.html
@@ -15,25 +15,25 @@
     </h3>
 
     <div class="row">
-        <div class="col-md-6">
-            <button class="btn btn-primary btn-block" data-toggle="modal" data-target="#alipayWindow">支付宝</button>
-        </div>
-        <div class="col-md-6">
-            <button class="btn btn-success btn-block" data-toggle="modal" data-target="#wechatWindow">微信支付</button>
-        </div>
-    </div>
-    <br/>
-    <br/>
-    <div class="row">
         <div class="col-md-4" style="display: block"></div>
         <div class="col-md-4">
+            <button class="btn btn-primary btn-block" data-toggle="modal" data-target="#alipayWindow">支付宝</button>
+            <br/>
+            <br/>
+            <button class="btn btn-success btn-block" data-toggle="modal" data-target="#wechatWindow">微信支付</button>
+            <br/>
+            <br/>
             <a class="btn btn-default btn-block" href="__CONTROLLER__/index" style="margin: auto;">返回主页</a>
         </div>
-        <div class="col-md-4" style="display: block"></div>
     </div>
-    <br/>
-    <br/>
 </div>
+</div>
+<br/>
+<br/>
+
+<br/>
+<br/>
+
 <input type="hidden" id="orderID" value="{$Think.session.user.makeOrderID}">
 
 <!-- 支付宝窗口 -->
@@ -46,7 +46,9 @@
             </div>
             <div class="modal-body">
                 <p>使用手机扫描下方的二维码方可支付，支付成功后，该订单将交由客服审核，审核成功后方可发货。</p>
-                <p><img src="__PUBLIC__/images/payment/alipay.jpg" width="65%" height="65%"/></p>
+                <p>
+                <center><img src="__PUBLIC__/images/payment/alipay.jpg" width="65%" height="65%"/></center>
+                </p>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-success btn-block" id="btnPayByAlipay">付款完成</button>
@@ -65,7 +67,10 @@
             </div>
             <div class="modal-body">
                 <p>使用手机扫描下方的二维码方可支付，支付成功后，该订单将交由客服审核，审核成功后方可发货。</p>
-                <p><img src="__PUBLIC__/images/payment/wechat.jpg" width="65%" height="65%"/></p>
+                <p>
+                <center><img src="__PUBLIC__/images/payment/wechat.jpg" width="65%" height="65%"/>
+                    <center>
+                </p>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-success btn-block" id="btnPayByWechat">付款完成</button>
