Home index page -- fix UI bug.

--- a/Application/Home/View/Index/index.html
+++ b/Application/Home/View/Index/index.html
@@ -71,6 +71,7 @@
                             </div>
                         </notempty>
                     </for>
+                    <div class="clearfix"></div>
                 </div>
             </for>
         </div>
