Home module -- Initialize user info page.(Designed by:JC Wang)

--- a/Application/Home/View/Layout/layout.html
+++ b/Application/Home/View/Layout/layout.html
@@ -36,7 +36,7 @@
             </notpresent>
             <else/>
             <li><a class="navbar-link glyphicon glyphicon-cart" href="__CONTROLLER__/cart.html">&nbsp;购物车</a></li>
-            <li><a class="navbar-link glyphicon glyphicon-user" href="javascript:void(0)">&nbsp;{$Think.session.user.usrName}</a>
+            <li><a class="navbar-link glyphicon glyphicon-user" href="__CONTROLLER__/user.html">&nbsp;{$Think.session.user.usrName}</a>
             </li>
             <li><a class="navbar-link glyphicon glyphicon-log-out" href="#" id="btnLogout">&nbsp;登出&nbsp;</a></li>
         </notpresent>
