--- a/Application/Home/View/Index/user_info.html
+++ b/Application/Home/View/Index/user_info.html
@@ -1,13 +1,10 @@
 <div class="container">
     <div class="row">
         <div class="col-lg-2">
-            <div class="thumbnail">
-                <img src="__PUBLIC__/images/201305131827473DZV.jpg">
-            </div>
             <div class="span6">
                 <ul class="nav nav-pills nav-stacked">
                     <li class="active"><a href="javascript:void(0)">
-                        <center>订单信息</center>
+                        <center>我的订单</center>
                     </a></li>
                     <li><a href="javascript:void(0)">
                         <center>个人信息</center>
