Home single goods page -- Show goods count.

--- a/Application/Home/View/Index/single.html
+++ b/Application/Home/View/Index/single.html
@@ -44,7 +44,7 @@
                                     <li><a href="#"><i> </i></a></li>
                                 </ul>
                                 <div class="review">
-                                    <a href="#"> 1 位顾客评价</a>
+                                    <span>销量：{$data['gsoldoutnum']}</span>
 
                                 </div>
                                 <div class="clearfix"></div>
@@ -54,7 +54,7 @@
                             <p></p>
                             <div class="available">
                                 <ul>
-                                    <li>销量：{$data['gsoldoutnum']}</li>
+                                    <li>库存：{$data['gcount']}</li>
                                     <li>数量
                                         <select id="goodsCount">
                                             <option value="1" selected>1</option>
