Home user info page -- Add links for goods images in order list.

--- a/Application/Home/View/Index/user_info.html
+++ b/Application/Home/View/Index/user_info.html
@@ -59,7 +59,8 @@
                             <td>
                                 <center>
                                     <div class="thumbnail" style="width:100px;margin-top:10px;">
-                                        <img src="{$v.ordergoodsimg}">
+                                        <a href="__CONTROLLER__/single.html?goodsID={$v.ordergoodsid}"
+                                           target="_blank"><img src="{$v.ordergoodsimg}"></a>
                                     </div>
                                 </center>
                             </td>
